    certain complicated string types.  (reported by Gary King)
  * fixed bug: STRING-TO-OCTETS and OCTETS-TO-STRING did not convert
    character codes.  (thanks to Yaroslav Kavenchuk and Ivan Boldyrev)
  * fixed bug: DOCUMENTATION on structures no longer signals an 
    error if no structure type of the right name exists.  (reported by
    Glenn Ehrlich)

changes in sbcl-0.9.9 relative to sbcl-0.9.8:
  * new platform: experimental support for the Windows operating
    system has been added.  (thanks to Alastair Bridgewater)
  * fixed several bugs in and robustified the PPC FFI (including
    callbacks).  (thanks to Cyrus Harmon and Heiner Schwarte)
  * bug fix: allow non-simple string symbol names (reported by Paul
    Dietz)
  * bug fix: interrupt handling on NetBSD (thanks to Richard M
    Kreuter)
  * bug fix: saving a core corrupted callbacks on x86/x86-64
  * bug fix: closed a loophole in metacircularity detection and
    grounding in the PCL implementation of CLOS.
  * bug fix: TRUENAME on "/" no longer returns a relative pathname.
    (reported by tomppa on #lisp)
  * bug fix: clear the direction flag on Lisp -> C transitions, as 
    required by the x86-64 ABI. Fixes mysterious GC crashes on SuSE.
    (reported by Andrej Grozin and Hendrik Maryns)
  * optimization: major improvements to GC efficiency on GENCGC platforms
  * optimization: faster implementation of EQUAL
  * optimization: emit more efficient opcodes for some common 
    immediate->register MOV instructions on x86-64.  (thanks to Lutz Euler)
  * optimization: several other minor code-generation improvements on x86-64
  * fixed segfaults on x86 FreeBSD 7-current.  (thanks to NIIMI Satoshi)

changes in sbcl-0.9.8 relative to sbcl-0.9.7:
  * minor incompatible change: (SETF CLASS-NAME) and (SETF
    GENERIC-FUNCTION-NAME) are generic functions once more (reverting
    the change in the 0.9.7 release).  (SETF CLASS-NAME) is specified
    by ANSI as a generic function, and for consistency (SETF